@@ -45,19 +45,18 @@ namespace WebCore {
 
 @class WebBaseNetscapePluginView;
 @class NSURLResponse;
-@class WebBaseNetscapePluginStream;
 
 class WebNetscapePluginStream : public RefCounted<WebNetscapePluginStream>
                               , private WebCore::NetscapePlugInStreamLoaderClient
 {
 public:
-    static PassRefPtr<WebNetscapePluginStream> create(WebBaseNetscapePluginStream *stream, NSURLRequest *request, NPP plugin, bool sendNotification, void* notifyData)
+    static PassRefPtr<WebNetscapePluginStream> create(NSURLRequest *request, NPP plugin, bool sendNotification, void* notifyData)
     {
-        return adoptRef(new WebNetscapePluginStream(stream, request, plugin, sendNotification, notifyData));
+        return adoptRef(new WebNetscapePluginStream(request, plugin, sendNotification, notifyData));
     }
-    static PassRefPtr<WebNetscapePluginStream> create(WebBaseNetscapePluginStream *stream, WebCore::FrameLoader* frameLoader)
+    static PassRefPtr<WebNetscapePluginStream> create(WebCore::FrameLoader* frameLoader)
     {
-        return adoptRef(new WebNetscapePluginStream(stream, frameLoader));
+        return adoptRef(new WebNetscapePluginStream(frameLoader));
     }
     virtual ~WebNetscapePluginStream();
 
@@ -125,27 +124,9 @@ public:
     void deliverDataTimerFired(WebCore::Timer<WebNetscapePluginStream>* timer);
     WebCore::Timer<WebNetscapePluginStream> m_deliverDataTimer;
     
-    // FIXME: Remove this once it's not needed anymore.
-    WebBaseNetscapePluginStream *m_pluginStream;
-    
 private:
-    WebNetscapePluginStream(WebBaseNetscapePluginStream *, WebCore::FrameLoader*);
-    WebNetscapePluginStream(WebBaseNetscapePluginStream *, NSURLRequest *, NPP, bool sendNotification, void* notifyData);
+    WebNetscapePluginStream(WebCore::FrameLoader*);
+    WebNetscapePluginStream(NSURLRequest *, NPP, bool sendNotification, void* notifyData);
 };
 
-@interface WebBaseNetscapePluginStream : NSObject
-{     
-    RefPtr<WebNetscapePluginStream> _impl;
-}
-
-- (WebNetscapePluginStream *)impl;
-
-- (id)initWithFrameLoader:(WebCore::FrameLoader *)frameLoader;
-
-- (id)initWithRequest:(NSURLRequest *)theRequest
-               plugin:(NPP)thePlugin
-           notifyData:(void *)theNotifyData
-     sendNotification:(BOOL)sendNotification;
-
-@end
 #endif
